Update the references to the old repository owner name
This commit makes updates to the various references to `AnthonyIacono` to replace with the newly formed GitHub organization `canitmux`. I created this organization to ensure that I was able to properly set up a service account with write permissions for the sake of publishing the GitHub Pages site in the pipeline.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnthonyIacono/canitmux.git"
+    "url": "git+https://github.com/canitmux/canitmux.git"
   },
   "keywords": [
     "laptop",
@@ -17,12 +17,12 @@
     "nvidia",
     "optimus"
   ],
-  "author": "https://github.com/AnthonyIacono/canitmux",
+  "author": "https://github.com/canitmux/canitmux",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AnthonyIacono/canitmux/issues"
+    "url": "https://github.com/canitmux/canitmux/issues"
   },
-  "homepage": "https://github.com/AnthonyIacono/canitmux#readme",
+  "homepage": "https://github.com/canitmux/canitmux#readme",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
