Publish a version number to the static website to ensure better traceability
This commit publishes the commit hash prior to pushing the GitHub pages branch in the pipeline, which will be available at `https://canitmux.com/version.txt`

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -42,6 +42,9 @@ jobs:
         run: echo 'www.canitmux.com' > docs/CNAME
       - name: Copy Distribution Folder to Docs
         run: cp -R repo/dist/* gh-pages/docs/
+      - name: Create Version Text File
+        working-directory: gh-pages
+        run: echo "$GITHUB_SHA" > docs/version.txt
       - name: Stage Pages
         working-directory: gh-pages/docs
         run: git add -A
