--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A website for determining which laptop models support MUX capabilities for their dedicated graphics hardware.",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "lint": "eslint --ext .tsx,.ts src/"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,14 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "eslint": "^8.22.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "parcel": "latest",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "typescript": "^4.7.4"
   }
 }
