--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,11 +7,7 @@
         "plugin:react/recommended",
         "standard-with-typescript"
     ],
-    "overrides": [
-        {
-            "files": [ "src/*.ts", "src*.tsx" ]
-        }
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
@@ -20,5 +16,8 @@
     "plugins": [
         "react"
     ],
-    "rules": {}
+    "rules": {
+        "semi": ["error", "always"],
+        "@typescript-eslint/semi": "off"
+    }
 }
