Build and publish db.json file in site root
This commit builds a database file for the public to consume inside of the root of the site at db.json, which will include the list of laptops and the commit hash which generated the file.

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -28,3 +28,6 @@ jobs:
       - name: Build Site
         working-directory: repo
         run: npm run build
+      - name: Build DB
+        working-directory: repo
+        run: npm run build:db -- "$GITHUB_SHA"
