--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build Site
         working-directory: repo
         run: npm run build
+      - name: Build DB
+        working-directory: repo
+        run: npm run build:db -- "$GITHUB_SHA"
       - name: Checkout GH Pages
         uses: actions/checkout@v2
         with:
