--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "parcel src/index.html --open",
     "build": "parcel build src/index.html",
-    "lint": "eslint --ext .tsx,.ts src/"
+    "build:db": "tsx scripts/buildDb.ts",
+    "lint": "eslint --ext .tsx,.ts src/ scripts/"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-react": "^7.30.1",
     "parcel": "latest",
     "process": "^0.11.10",
+    "tsx": "^3.8.2",
     "typescript": "^4.7.4"
   }
 }
